force-app/main/default/objects/Contact_Durable_History__c/Contact_Durable_History__c.object-meta.xml
<CustomObject>
    <description>Provides a record of merged and deleted contacts.</description>
    <label>Contact Durable History</label>
    <nameField>
        <displayFormat>CDH-{0000}</displayFormat>
        <label>Contact Durable History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts Durable History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>