force-app/main/default/objects/Contact_Durable_History__c/fields/CDH_No__c.field-meta.xml
<CustomField>
    <fullName>CDH_No__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic.lightning.force.com/&quot;&amp;Id, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDH No.</label>
    <type>Text</type>
</CustomField>