force-app/main/default/objects/Contact_Durable_History__c/fields/Contact_Deleted_CMS_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Deleted_CMS_Id__c</fullName>
    <description
  >The CMS ID of the deleted contact record (if it had one)</description>
    <inlineHelpText
  >The CMS ID of the deleted contact record (if it had one)</inlineHelpText>
    <label>Contact Deleted CMS Id</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>