force-app/main/default/objects/Contact_Durable_History__c/fields/Contact_Deleted_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Deleted_Id__c</fullName>
    <description
  >This is a record of the Salesforce Id of the record deleted.</description>
    <inlineHelpText
  >This is a record of the Salesforce Id of the record deleted.</inlineHelpText>
    <label>Contact Deleted Id</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>