force-app/main/default/objects/Contact_Durable_History__c/fields/Contact_Deleted_Json__c.field-meta.xml
<CustomField>
    <fullName>Contact_Deleted_Json__c</fullName>
    <description
  >Machine readable data saved from the deleted contact record.</description>
    <inlineHelpText
  >Machine readable data saved from the deleted contact record.</inlineHelpText>
    <label>Contact Deleted Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>