force-app/main/default/objects/Contact_Durable_History__c/fields/Contact_Reference__c.field-meta.xml
<CustomField>
    <fullName>Contact_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >When a contact is merged, this refers to the &apos;winning&apos; record.</description>
    <inlineHelpText
  >When a contact is merged, this refers to the &apos;winning&apos; record.</inlineHelpText>
    <label>Contact Reference</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts Durable History</relationshipLabel>
    <relationshipName>Contacts_Durable_History</relationshipName>
    <type>Lookup</type>
</CustomField>