force-app/main/default/objects/Contact_Durable_History__c/fields/Contact_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Reference_Id__c</fullName>
    <formula>Contact_Reference__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Reference Id</label>
    <type>Text</type>
</CustomField>